logs/shelly.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/consoleLog'...
Compiling './lib/python3.5/site-packages/consoleLog/io.py'...
***   File "./lib/python3.5/site-packages/consoleLog/io.py", line 31
    raise Exception, "Must be either read mode or write, but not both"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/consoleLog/progressBar.py'...
***   File "./lib/python3.5/site-packages/consoleLog/progressBar.py", line 46
    raise ValueError, "seq has no __len__ method"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/consoleLog-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shelly-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/shelly_cmd'...
Compiling './lib/python3.5/site-packages/shelly_cmd/exists.py'...
***   File "./lib/python3.5/site-packages/shelly_cmd/exists.py", line 18
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shelly_cmd/max.py'...
***   File "./lib/python3.5/site-packages/shelly_cmd/max.py", line 19
    print '%18s' % 'max'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shelly_cmd/min.py'...
***   File "./lib/python3.5/site-packages/shelly_cmd/min.py", line 21
    print '%18s' % 'min'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shelly_cmd/range.py'...
***   File "./lib/python3.5/site-packages/shelly_cmd/range.py", line 21
    print '%21s %21s %12s' % ('min', 'max', 'delta')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shelly_cmd/shrandom.py'...
***   File "./lib/python3.5/site-packages/shelly_cmd/shrandom.py", line 32
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
